# deep-translator-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: deploy-to-azure.yml  main_deep-translator-api.yml  publish-docker.yml  pylint.yml  test.yml
src/: __init__.py  app.py  main.py  metadata.py  models.py  utils.py
src/models/: requests.py  responses.py
src/models/requests/: __init__.py  _base.py  _requests.py
tests/: __init__.py  base.py  data.py  test_main.py
