[tool.poetry]
name = "deep-translator-api"
version = "0.1.0"
description = "API based on the deep-translator package"
authors = ["nidhal baccouri <nidhalbacc@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
deep-translator = "^1.8.3"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.1.0"
pytest = "^7.1.1"
pylint = "^2.13.4"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
