[tool.poetry]
name = "deep-translator-api"
version = "0.1.0"
description = "API based on the deep-translator package"
authors = ["nidhal baccouri <nidhalbacc@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
deep-translator = "^1.8.3"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.1.0"
pytest = "^7.1.1"
pylint = "^2.13.4"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
steps:
    - name: Get the tag version
      id: get_version
      run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}

    - name: docker login
      run: |
        docker login -u ${{secrets.DOCKER_USER}} -p ${{secrets.DOCKER_PASSWORD}}

    - uses: actions/checkout@v3
    - name: Build the Docker image
      run: docker build . --file Dockerfile --tag nidhaloff/${{github.repository}}:${{ steps.get_version.outputs.VERSION }}

    - name: Docker Push
      run: docker push nidhaloff/${{github.repository}}
